fixed 1px gaps between SVGs & divs

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -832,7 +832,7 @@ textarea {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 800px) {
   body {
     min-width: 750px;
     overflow-x: hidden;
@@ -870,6 +870,7 @@ textarea {
   #about-you-row-container {
     padding-left: 3rem;
     padding-right: 3rem;
+    margin-bottom: -1px;
   }
 
   #headshot-container {
@@ -891,6 +892,8 @@ textarea {
 
   .social-proof {
     height: 44rem;
+    margin-bottom: -1px;
+    margin-top: -1px;
   }
 
   #about-row-container {
@@ -912,6 +915,11 @@ textarea {
     margin-left: 1rem;
   }
 
+  .more-about-row-container {
+    margin-top: -1px;
+    margin-bottom: -1px;
+  }  
+
   .more-about {
     width: 80%;
   }
@@ -920,6 +928,9 @@ textarea {
     width: 80%;
   }
   
+  #faq-row-container {
+    margin-top: -1px;
+  }
   
 }
 
